# agentkit

./: .dockerignore  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  e2e.yml  forge-cert-renew.yml  forge-desktop-release-artifacts.yml  forge-desktop-security.yml  forge-desktop-smoke.yml  forge-download-deploy.yml  forge-release-mirror.yml  image-auto-core.yml  image-auto-web.yml  image-forge-web.yml  image-forge.yml  image-market-core.yml  image-market-web.yml  image-profile-web.yml  image-site.yml  promote-notify.yml  release-selfhost.yml  scp-coordination-smoke.yml  site-deploy.yml
apps/auto-web/: .dockerignore  .env.example  .gitignore  AUTO_RUN_EXECUTION_PLAN.md  Dockerfile  amplify.yml  middleware.ts  package-lock.json  package.json
apps/forge-desktop/: README.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  package-lock.json  package.json
apps/forge-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/forge-desktop/src-tauri/.cargo/: audit.toml
apps/forge-desktop/src-tauri/backend/: agent-kit-version.mjs  gateway-run.mjs  market-operation.mjs
apps/forge-desktop/src-tauri/capabilities/: default.json
apps/forge-desktop/src-tauri/src/: account_auth.rs  gateway_run.rs  lib.rs  secure_storage.rs  settings.rs
apps/forge-download/: README.md  astro.config.mjs  package.json
apps/forge-web/: .env.example  Dockerfile  README.md  package.json
deploy/: SELF_HOSTING.md
e2e/: .gitignore  README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts
(+786 files in other folders)
