[package]
name = "agentkitforge-app"
version = "0.1.0"
description = "Desktop app for building, validating, packaging, installing, and using Agent Kits."
authors = ["AgentKitForge"]
edition = "2021"

[lib]
name = "agentkitforge_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
keyring = "3"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
zip = "4"

# macOS-only: security-framework (and its core-foundation dep) don't compile on
# Windows/Linux. All call sites in secure_storage.rs are #[cfg(target_os = "macos")];
# non-macOS uses keyring. Gating here keeps the Windows/Linux builds green.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
